cargo-features = ["edition"]

[package]
name = "hitbtc"
version = "0.1.0"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
edition = "2018"

[dependencies]
chrono = "0.4"
colored = "1.6"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-tungstenite = { path = "/home/kaz/a/tokio-tungstenite" }
tungstenite = "0.5"
url = "1.7"
xenon = { path = "../../xenon" }

[dependencies.simble]
version = "0.1"
features = ["nightly", "serde"]
