[package]
name = "hitbtc"
version = "0.1.0"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Client for the HitBTC WebSockets API"
repository = "https://github.com/kazcw/hitbtc"

[dependencies]
chrono = "0.4"
colored = "1.6"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-tungstenite = "0.6"
tungstenite = "0.6"
url = "1.7"
xenon = "0.1"

[dependencies.simble]
version = "0.1.1"
features = ["nightly", "serde"]
